# surgical_instruments

./: .gitignore  USAGE_GUIDE.md  infer.py  integrate_new_labels.py  prepare_dataset.py  pyproject.toml  requirements-dev.txt  requirements.txt  train.py
labelling/: LABELING_GUIDE.md
tests/: conftest.py  test_infer.py  test_webapp.py
webapp/: main.py
webapp/static/: app.js  index.html  styles.css
